xss data reflected back to homepage

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -10,14 +10,16 @@
 
     
 
-      <form action="/api/xss.json">
+      <form id= "url_form">
         <label for="url">URL:</label>
         <input type="text" id="url" name="url"><br><br>
         <input type="submit" value="Submit">
       </form>
 
-
-
+      <!-- <form id="xss">
+        URL: <input type="text" name="url">
+      </form> -->
+    
 
 
 
@@ -31,7 +33,9 @@
       </script>
     </div> -->
 
+  <div id='xss'>
 
+  </div>
 
   <div class="w-25 panel panel-default justify-content-center"" id='ping'>
     <table id="table table-curved" class="table table-dark">
