fixed delay for non vulnerable and refreshing after each submit

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -8,7 +8,10 @@
 
     <h1>Dashboard</h1>
 
-    
+    <div id="pageloader" hidden>
+      <img src="static/img/loader.gif" alt="processing..." /> 
+      <!-- http://www.ajaxload.info/ -->
+   </div>
 
       <form id="url_form">
         <label form="url">URL:</label>
