--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -12,11 +12,15 @@
       <img src="static/img/loader.gif" alt="processing..." /> 
       <!-- http://www.ajaxload.info/ -->
    </div>
-
+   <h3>Logged in as {{session['user']}}</h3>
       <form id="url_form">
         <label form="url">URL:</label>
         <input type="text" id="url" name="url"><br><br>
         <input type="submit" value="Submit">
+        <!-- <input type="submit" value="Save Report" formaction="/reports"> -->
+      </form>
+      <form action='/save_report' id="save_report">
+        <input type="submit" value="Save Report">
       </form>
 
       <!-- <form id="xss">
@@ -43,7 +47,7 @@
     <table id="table" class="table table-dark" style="display:none">
       <tr><th>URL</th><td id="vuln_url">None</td></tr>
       <tr><th>Is Vulnerable</th><td id="is_vulnerable">None</td></tr>
-      <tr><th>Successful Exploit</th><td id="exploit">None</td></tr>
+      <tr><th>Successful Payload</th><td id="exploit">None</td></tr>
       <tr><th>Vulnerable Field Name Tag</th><td id="vuln_field">None</td></tr>
       <tr><th>Vulnerable Form Type</th><td id="vuln_form_type">None</td></tr>
       <tr><th>Method</th><td id="method">Get</td></tr>
@@ -77,7 +81,7 @@
   </div>
 
 
-  <div>
+  <div id="logout">
     <form action='/logout'>
         <p>
         <input type="submit" name="logout" value="log out" >
